@@ -1,13 +1,10 @@
 package com.tradingbot.dotty.utils;
 
-import com.tradingbot.dotty.models.Position;
 import com.tradingbot.dotty.models.ScreenedTicker;
 import com.tradingbot.dotty.models.TickersTradeUpdates;
 import com.tradingbot.dotty.models.dto.ScreenedTickerDTO;
 import com.tradingbot.dotty.models.dto.ScreenedTickersResponse;
-import com.tradingbot.dotty.models.dto.TechnicalIndicatorResponse;
 import com.tradingbot.dotty.models.dto.TickersTradeUpdatesDTO;
-import com.tradingbot.dotty.service.PositionService;
 import com.tradingbot.dotty.service.ScreenedTickersService;
 import com.tradingbot.dotty.service.TickersTradeUpdatesService;
 import lombok.extern.slf4j.Slf4j;
@@ -50,7 +47,7 @@ public class Utils {
         log.info("Getting Screened Tickers.");
         ScreenedTickersResponse[] screenedTickersResponse = apiRequests.stockScreenerUpdateRetrieve();
         if (screenedTickersResponse != null) {
-            log.info("Saving Tickers to Screened Tickers. {}");
+            log.info("Saving Tickers {} to Screened Tickers. ", screenedTickersResponse);
             screenedTickersService.insertScreenedTickers(Arrays.stream(screenedTickersResponse).map(screenedTicker -> modelMapper.map(screenedTicker, ScreenedTickerDTO.class)).collect(Collectors.toList()));
 
             selectAndSaveScreenedTickers();
@@ -65,7 +62,7 @@ public class Utils {
         List<ScreenedTicker> screenedTickers = screenedTickerDTOS.stream()
                 .filter(x -> (x.getSector()!=null && (x.getSector().contains("Consumer Cyclical") || x.getSector().contains("Technology") || x.getSector().contains("Communication Services"))))
                 .map(x -> modelMapper.map(x, ScreenedTicker.class))
-                .collect(Collectors.toList());
+                .toList();
 
         log.info("Inserting Screened Tickers to market trade updates.");
         List<TickersTradeUpdates> tickersTradeUpdates = screenedTickers.stream().map(x -> modelMapper.map(x,TickersTradeUpdates.class)).collect(Collectors.toList());
@@ -84,7 +81,7 @@ public class Utils {
         LocalDateTime currDateTime = LocalDateTime.now();
         LocalDateTime localDateTime = LocalDateTime.of(currDateTime.getYear(), currDateTime.getMonth(), currDateTime.getDayOfMonth(), currDateTime.getHour(), currDateTime.getMinute(),00);
 
-        LocalDateTime dateTime = LocalDateTime.of(2024,03,14, 15,50,10);
+        LocalDateTime dateTime = LocalDateTime.of(2024,03,14, 15,45,10);
 
         for(int i=0; i<tickersTradeUpdates.size(); i++){
             marketDataFunnel.processTickerTechnicalAnalysisUpdates(apiRequests.technicalIndicatorRetrieve(tickersTradeUpdates.get(i).getSymbol(), dateTime));
@@ -100,7 +97,7 @@ public class Utils {
 
     public void subscribeToTickersTradesUpdate(String ticker) {
         try {
-            log.info("Trades Update ::Subscribe Ticker:: {}");
+            log.info("Trades Update ::Subscribe Ticker:: {}", ticker);
             WebSocketSession tickerUpdatesWSSession = tickerUpdatesWebSocket.getTickerUpdatesWebSocket();
             tickerUpdatesWSSession.sendMessage(new TextMessage("{\"type\":\"subscribe\",\"symbol\":\"" + ticker + "\"}"));
         } catch (ExecutionException | InterruptedException | IOException e) {
@@ -110,7 +107,7 @@ public class Utils {
 
     public void unsubscribeToTickersTradesUpdate(String ticker) {
         try {
-            log.info("Trades Update ::Unsubscribe Ticker:: {}");
+            log.info("Trades Update ::Unsubscribe Ticker:: {}", ticker);
             WebSocketSession tickerUpdatesWSSession = tickerUpdatesWebSocket.getTickerUpdatesWebSocket();
             tickerUpdatesWSSession.sendMessage(new TextMessage("{\"type\":\"unsubscribe\",\"symbol\":\"" + ticker + "\"}"));
 //            tickerUpdatesWSSession.close();
